# paddle_lite_ocr_linux_arm64

./: .BUILDINFO  .MTREE  .PKGINFO  CMakeLists.txt  README.md  build.sh
.docker/: Dockerfile
.github/workflows/: docker-image.yml
cxx/include/: paddle_use_kernels.h  paddle_use_ops.h
cxx/opencv-linux-aarch64/include/opencv2/: cvconfig.h
cxx/opencv-linux-aarch64/lib64/pkgconfig/: opencv.pc
cxx/opencv-linux-aarch64/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
debug/: pdocr  test.sh
tools/: build_opencv.sh
